[package]
name = "repeat-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = "0.12"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
rusqlite = { version = "0.39", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
